--- a/server/public/css/layout/_topnav.css
+++ b/server/public/css/layout/_topnav.css
@@ -1,4 +1,6 @@
 .topnav {
+    position: fixed;
+
     top: 0;
     left: 0;
 
